<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <include
        layout="@layout/toolbar"/>

    <Button
        android:text="@string/accept_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/acc_continue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:focusable="true"
        android:contentDescription="@string/accept_continue"
        android:background="@color/colorAccent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="@dimen/edit_text_height"
        android:ems="10"
        android:hint="@string/CC"
        android:gravity="right|center_vertical"
        android:id="@+id/country_code"
        android:text="+91"
        android:paddingRight="20dp"
        android:layout_marginBottom="74dp"
        android:layout_above="@+id/acc_continue"
        android:layout_alignParentLeft="true"
        android:editable="false"
        android:focusable="false"
        android:background="@drawable/bazaar_edit_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:singleLine="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/phone_number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textSize="12sp"
         />

    <TextView
        android:text="@string/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_text_height"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_number"
        android:paddingLeft="20dp"
        android:hint="@string/enter_phone_number"
        android:focusable="true"
        android:background="@drawable/bazaar_edit_name"
        android:layout_alignBottom="@+id/country_code"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/country_code"
        android:layout_toEndOf="@+id/country_code"
        android:layout_alignTop="@+id/country_code" />
</RelativeLayout>
