<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/red"/>
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@+id/name_err"
                android:layout_centerHorizontal="true"

                android:background="@drawable/bazaar_edit_name"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:padding="5dp"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/email_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/mobile_number"
                android:textColor="@color/red"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@+id/email_err"
                android:layout_centerHorizontal="true"

                android:background="@drawable/bazaar_edit_name"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:selectAllOnFocus="false" />
            <TextView
                android:id="@+id/mobile_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="10dp"
                android:textColor="@color/red"/>
            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@+id/mobile_err"
                android:layout_centerHorizontal="true"

                android:background="@drawable/bazaar_edit_name"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:padding="5dp"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/interest_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                android:textColor="@color/red"/>
            <include
                layout="@layout/tag_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/interest_err"
                />


        </RelativeLayout>

    </ScrollView>
    <Button
        android:id="@+id/add_cutomer"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/add_customer" />
</RelativeLayout>