<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/action_bar"
    android:layout_marginTop="0dp"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"/>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_instruction"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/profile_form">

            <TextView
                android:id="@+id/user_name_err"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"/>
            <EditText

                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:imeOptions="actionNext"

                android:layout_below="@+id/user_name_err"
                android:inputType="text"
                android:digits="0,1,2,3,4,5,6,7,8,9,_,.,-,qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:layout_marginTop="2dp"
                android:background="@drawable/bazaar_edit_name"
                android:hint="@string/user_name"
                android:focusable="true"
                android:nextFocusDown="@+id/email_id"
                android:gravity="center" />


            <TextView
                android:id="@+id/email_err"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/user_name"
                android:textColor="@color/red"/>

            <EditText
                android:id="@+id/email_id"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/email_err"
                android:layout_gravity="center"
                android:background="@drawable/bazaar_edit_name"
                android:hint="@string/email_id"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/bazaar_login_button"
                android:gravity="center" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/bazaar_login_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/shopon_login_button"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/create_profile"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>


</LinearLayout>

